# watchfs

./: .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build_rust.bat  notes.txt  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-test.txt  run_maturin.sh  test_requirements.txt
.github/workflows/: ci.yml
build_scripts/: run_protoc.py
python/: .coveragerc
python/test/: conftest.py  test_watchfs.py
python/watchfs/: __init__.py  debounced_events.py  pywatchfs.py
src/: build.rs  lib.rs  main.rs  watchfs.proto
