[package]
authors = ["pearse <pearsedoolin@gmail.com>"]
name = "watchfs"
version = "0.1.8"
description = "A python file system watcher that uses the rust notify crate"
edition = "2021"
readme = "README.md"
license = "MIT"



[package.metadata.maturin]
maintainer = "Pearse Doolin"
maintainer-email = "pearsedoolin@gmail.com"
python-source = "python"
project-url = { "Home Page" = "https://github.com/pearsedoolin/watchfs/", "Bug Tracker"= "https://github.com/pearsedoolin/watchfs/issues" }
description-content-type = "text/markdown"
classifiers =[
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',

    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',

    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',

    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Filesystems',

    "License :: OSI Approved :: MIT License",
    ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "watchfs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]


[dependencies]
bytes="1.1.0"
notify = { version = "5.0.0-pre.13", features = ["serde"] }
log4rs="1.0.0"
serde_json = "1.0"

[dev-dependencies]
tempdir = "0.3"
regex = "1.5.4"
